Pull up following revision(s) (requested by joerg in ticket #1460): 	common/lib/libc/stdlib/_strtol.h: 1.11 via patch 	common/lib/libc/stdlib/_strtoul.h: 1.11 via patch 	tests/lib/libc/stdlib/t_strtol.c: 1.6-1.7 Fix testing of returned entptr, and fix three affected tests. From kamil@ via PR lib/49632 -- Fix ISO C compliance: strtol of "0xX" should give the largest valid numeric prefix, which is 0.